# IkaCaptcha

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  pyproject.toml
experiments/numpy_inference/: inference.py  test_parity.py
experiments/pure_python/: extract_weights.py  inference.py  test_parity.py  weights_manifest.json
ikaptcha/: __init__.py  model.py  transforms.py
scripts/: download_data.sh  eval_compare.py  eval_yolo.py  eval_yolo_corrected.py  export_onnx.py  fetch_captchas.py  generate_captcha.py  generate_dataset.py  kfold_validate.py  predict.py  predict_onnx.py  prepare_pseudo_train_v2.py  pseudo_label.py  train.py
